Added win tcp socket

--- a/Ntrip_client/CMakeLists.txt
+++ b/Ntrip_client/CMakeLists.txt
@@ -1,11 +1,16 @@
-﻿# CMakeList.txt: проект CMake для Ntrip_client; включите исходный код и определения,
-# укажите здесь логику для конкретного проекта.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.8)
 
 project ("Ntrip_client")
 
-set(SOURCES "main.cpp")
+#CXX
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable (Ntrip_client ${SOURCES})
+set(HEADERS "wintcpsocket.h"  "tcpsocket.h" "ntripclient.h")
+set(SOURCES "main.cpp" "wintcpsocket.cpp" "ntripclient.cpp")
 
+add_executable (Ntrip_client ${SOURCES} ${HEADERS})
+
+if(WIN32)
+  target_link_libraries(Ntrip_client wsock32 ws2_32)
+endif()
