Added ntrip_client prototype

--- a/Ntrip_client/CMakeLists.txt
+++ b/Ntrip_client/CMakeLists.txt
@@ -6,8 +6,8 @@ project ("Ntrip_client")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(HEADERS "wintcpsocket.h"  "tcpsocket.h" "ntripclient.h")
-set(SOURCES "main.cpp" "wintcpsocket.cpp" "ntripclient.cpp")
+set(HEADERS "wintcpsocket.h"  "tcpsocket.h" "ntripclient.h" "logger.h")
+set(SOURCES "main.cpp" "wintcpsocket.cpp" "ntripclient.cpp" "logger.cpp")
 
 add_executable (Ntrip_client ${SOURCES} ${HEADERS})
 
